# sio-tha

./: .gitignore  README.md
.github/workflows/: build-and-push-container-image.yml
client/: Containerfile  nginx.conf  package-lock.json  package.json
client/src/: App.tsx  index.css  main.tsx  router.tsx
client/src/components/: index.ts
client/src/pages/: index.ts
infrastructure/: application-programming-interfaces-deployment.yaml  application_programming_interfaces-service.yaml  compose.yml  database-client-cm0-configmap.yaml  database-client-deployment.yaml  database-client-ingress.yaml  database-deployment.yaml  database-service.yaml  database-volume-persistentvolume.yaml  database-volume-persistentvolumeclaim.yaml  database_client-service.yaml  ghcr-secret.yaml  nginx.conf  servers.json  web-client-deployment.yaml  web-client-ingress.yaml  web-server-cm0-configmap.yaml  web-server-deployment.yaml  web-server-ingress.yaml  web_client-service.yaml  web_server-service.yaml
infrastructure/iac/: Pulumi.dev.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json
infrastructure/services/: ApplicationProgrammingInterfaces.service.compose.yaml  Database.service.compose.yaml  DatabaseClient.service.compose.yaml  WebClient.service.compose.yaml  WebServer.service.compose.yaml
server/: Containerfile  database.py  main.py  pyproject.toml
server/models/: Base.py  Space.py  Transaction.py  __init__.py
server/schemas/: Space.py  Transaction.py  __init__.py
server/utilities/base/: SingletonMeta.py  __init__.py
server/utilities/database/: id.py
(+46 files in other folders)
